# trade-price-etl

./: .gitignore  README.md  environment.dev.yml  environment.yml  pyproject.toml
docker/: .env  .env.local  Dockerfile  docker-compose.development.yml  docker-compose.override.mac.example.yml  docker-compose.override.yml  docker-compose.yml
docker/config/: mosquitto.conf
docker/scripts/: start.sh
example/: consumer.py  consumer_via_websocket.py  publisher.py
mosquitto/: README.md  docker-compose.yml
mosquitto/config/: mosquitto.conf
mosquitto/src/: consumer.py
src/: .env
src/trade_price_etl/: __main__.py  cli.py
src/trade_price_etl/calculators/: base.py  sig_doube_peg.py  sig_volatile.py
src/trade_price_etl/constants/: constants.py
src/trade_price_etl/extractors/bases/web_scrapers/: driver.py  markets_insiders.py  trading_economics.py
src/trade_price_etl/extractors/web_scrapers/: driver.py  markets_insiders.py  trading_economics_multi_table.py  trading_economics_single_table.py
src/trade_price_etl/notifications/: publisher.py  redis.py
src/trade_price_etl/settings/: base_settings.py  extractor_settings.py  log_config.json  log_settings.py  mqtt_settings.py  redis_settings.py  settings.py  signal_settings.py
src/trade_price_etl/storage/: real_time_metric.py  real_time_price.py
src/trade_price_etl/utils/: utils.py
